--- a/Server/package.json
+++ b/Server/package.json
@@ -9,9 +9,12 @@
   "author": "Tuba",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.5.2",
     "express": "^4.16.4",
+    "express-async-handler": "^1.1.4",
     "grunt": "^1.0.3",
     "grunt-contrib-nodemon": "^0.5.4",
+    "mongoose": "^5.3.7",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.5",
     "winston": "^3.1.0",
